--- a/playground/package.json
+++ b/playground/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.9.0",
+    "@tanstack/react-query-devtools": "^5.10.0",
     "react": "^18.2.0",
+    "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
