--- a/playground/package.json
+++ b/playground/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
