--- a/playground/package.json
+++ b/playground/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
     "zustand": "^4.4.7"
   },
