--- a/playground/package.json
+++ b/playground/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
+    "react-spinners": "^0.13.8",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
