--- a/playground/package.json
+++ b/playground/package.json
@@ -16,6 +16,7 @@
     "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
     "zustand": "^4.4.7"
