--- a/playground/package.json
+++ b/playground/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/react": "^0.12.4",
     "@tanstack/react-query": "^5.9.0",
     "@tanstack/react-query-devtools": "^5.10.0",
+    "lexical": "^0.12.4",
     "react": "^18.2.0",
     "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
