--- a/playground/package.json
+++ b/playground/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lexical/react": "^0.12.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.9.0",
     "@tanstack/react-query-devtools": "^5.10.0",
-    "lexical": "^0.12.4",
+    "@tiptap/extension-color": "^2.1.13",
+    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-text-style": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "react": "^18.2.0",
     "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
@@ -36,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
