--- a/playground/.env
+++ b/playground/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_HOST=https://rhoopoe.com/api
-# VITE_BACKEND_HOST=http://localhost:8080
+# VITE_BACKEND_HOST=https://rhoopoe.com/api
+VITE_BACKEND_HOST=http://localhost:8080
